--- a/index.html
+++ b/index.html
@@ -10,8 +10,42 @@
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
+
 <body>
+  <div class="container">
+
+    <h2 class="header">US Venture Capital Landscape 2011</h2>
+
+    <div id="us1-chart">
+        <strong>New Yorker Circulation By State (color: total sold)</strong>
+        <a class="reset" href="javascript:us2Chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+        <span class="reset" style="display: none;"> | Current filter: <span class="filter"></span></span>
+
+        <div class="clearfix"></div>
+    </div>
+
+    <div id="us2-chart">
+        <strong>Saturday Evening Post Circulation By State (color: total sold)</strong>
+        <a class="reset" href="javascript:us2Chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+        <span class="reset" style="display: none;"> | Current filter: <span class="filter"></span></span>
+
+        <div class="clearfix"></div>
+    </div>
+
+    <div class="clearfix"></div>
+
+    <div id="line-chart">
+        <strong>By Circulation</strong>
+        <a class="reset" href="javascript:industryChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+
+        <div class="clearfix"></div>
+    </div>
+
+  </div>
+
   <script src="assets/js/d3.js"></script>
-  <script src="assets/js/main.js"></script>
+  <script type="text/javascript" src="assets/js/crossfilter.js"></script>
+  <script type="text/javascript" src="assets/js/dc.min.js"></script>
+  <script src="assets/js/index.js"></script>
 </body>
 </html>
