--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
   <div class="container">
 
-    <h2 class="header">US Venture Capital Landscape 2011</h2>
+    <h2 class="header">Magazine Circulation</h2>
 
     <div id="us1-chart">
         <strong>New Yorker Circulation By State (color: total sold)</strong>
-        <a class="reset" href="javascript:us2Chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+        <a class="reset" href="javascript:us1Chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
         <span class="reset" style="display: none;"> | Current filter: <span class="filter"></span></span>
 
         <div class="clearfix"></div>
@@ -46,6 +46,7 @@
   <script src="assets/js/d3.js"></script>
   <script type="text/javascript" src="assets/js/crossfilter.js"></script>
   <script type="text/javascript" src="assets/js/dc.min.js"></script>
+  <script src="assets/js/dateformat.js"></script>
   <script src="assets/js/index.js"></script>
 </body>
 </html>
