--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="us1-chart">
         <strong>New Yorker Circulation By State (color: total sold)</strong>
         <a class="reset" href="javascript:us1Chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
-        <span class="reset" style="display: none;"> | Current filter: <span class="filter"></span></span>
+        <p class="reset" style="display: hidden;"> | Current filter: <span class="filter"></span></p>
 
         <div class="clearfix"></div>
     </div>
@@ -27,7 +27,7 @@
     <div id="us2-chart">
         <strong>Saturday Evening Post Circulation By State (color: total sold)</strong>
         <a class="reset" href="javascript:us2Chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
-        <span class="reset" style="display: none;"> | Current filter: <span class="filter"></span></span>
+        <p class="reset" style="display: hidden;"> | Current filter: <span class="filter"></span></p>
 
         <div class="clearfix"></div>
     </div>
@@ -36,7 +36,7 @@
 
     <div id="line-chart">
         <strong>By Circulation</strong>
-        <a class="reset" href="javascript:industryChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+        <a class="reset" href="javascript:composite.filterAll();dc.redrawAll();" style="display: none;">reset</a>
 
         <div class="clearfix"></div>
     </div>
