Fixed major bug with incorrect values on line chart

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <strong>Circulation By State (color: total sold)</strong>
             <a class="reset" href="javascript:us1Chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
             <div class="clearfix"></div>
+            <p class="reset" style="display: none;">Current filter: <span class="filter"></span></p>
         </div>
 
         <div id="line-chart-1">
@@ -54,20 +55,7 @@
             <div class="clearfix"></div>
         </div>
       </div>
-      <p class="reset" style="display: hidden;"> | Current filter: <span class="filter"></span></p>
     </div>
-
-    <!-- <div id="us2-chart">
-        <strong>Saturday Evening Post Circulation By State (color: total sold)</strong>
-        <a class="reset" href="javascript:us2Chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
-        <p class="reset" style="display: hidden;"> | Current filter: <span class="filter"></span></p>
-
-        <div class="clearfix"></div>
-    </div> -->
-
-    <div class="clearfix"></div>
-
-
 
   </div>
 
