Major updates to choropleth functionality

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Circulating Magazines">
   <meta name="author" content="Ricky Holtz">
 
+  <link rel="stylesheet" href="assets/css/dc.css">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
@@ -19,26 +20,28 @@
     <div class="chart-group-1">
       <h3 id="magazine-title-1"></h3>
       <form>
-        <input
-          type="radio"
-          id="renderOption1"
-          name="chart-group-1"
-          value="rawData"
-          onChange="javascript:us1ChartRenderOption=event.target.value;us1Chart.customUpdate();dc.redrawAll();"
-          checked>
-        <label for="renderOption1">Raw Data</label>
+        <div class="switch-field">
+          <input
+            type="radio"
+            id="renderOption1"
+            name="chart-group-1"
+            value="rawData"
+            onChange="javascript:us1ChartRenderOption=event.target.value;us1Chart.customUpdate();dc.redrawAll();"
+            checked />
+          <label for="renderOption1">Raw Data</label>
 
-        <input type="radio" id="renderOption2"
-         name="chart-group-1" value="percentOfPopulation"
-         onChange="javascript:us1ChartRenderOption=event.target.value;us1Chart.customUpdate();dc.redrawAll();"
-         >
-        <label for="renderOption2">% of Population</label>
+          <input type="radio" id="renderOption2"
+           name="chart-group-1" value="percentOfPopulation"
+           onChange="javascript:us1ChartRenderOption=event.target.value;us1Chart.customUpdate();dc.redrawAll();"
+           />
+          <label for="renderOption2">% of Population</label>
 
-        <input type="radio" id="renderOption3"
-         name="chart-group-1" value="percentOfTotal"
-         onChange="javascript:us1ChartRenderOption=event.target.value;us1Chart.customUpdate();dc.redrawAll();"
-         >
-        <label for="renderOption3">% of Total</label>
+          <input type="radio" id="renderOption3"
+           name="chart-group-1" value="percentOfTotal"
+           onChange="javascript:us1ChartRenderOption=event.target.value;us1Chart.customUpdate();dc.redrawAll();"
+           />
+          <label for="renderOption3">% of Total</label>
+        </div>
       </form>
       <div class="charts">
         <div id="us1-chart">
@@ -48,11 +51,14 @@
             <p class="reset" style="display: none;">Current filter: <span class="filter"></span></p>
         </div>
 
-        <div id="line-chart-1">
-            <strong>By Circulation</strong>
-            <a class="reset" href="javascript:line1.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+        <div class="line-chart-container">
+          <div id="line-chart-1">
+              <strong>By Circulation</strong>
+              <a class="reset" href="javascript:lineChart1.filterAll();lineChart1Range.filterAll();dc.redrawAll();" style="display: none;">reset</a>
 
-            <div class="clearfix"></div>
+              <div class="clearfix"></div>
+          </div>
+          <div id="line-chart-1-range"></div>
         </div>
       </div>
     </div>
