Major updates to functionality

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   <script type="text/javascript" src="assets/js/crossfilter.js"></script>
   <script type="text/javascript" src="assets/js/dc.min.js"></script>
   <script src="assets/js/dateformat.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
   <script src="assets/js/index.js"></script>
 </body>
 </html>
