--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="assets/css/dc.css">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 
@@ -45,7 +46,7 @@
       </form>
       <div class="charts">
         <div id="us1-chart">
-            <strong>Circulation By State (color: total sold)</strong>
+            <h3 class="chart-title">Circulation By State (color: total sold)</h3>
             <a class="reset" href="javascript:us1Chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
             <div class="clearfix"></div>
             <p class="reset" style="display: none;">Current filter: <span class="filter"></span></p>
@@ -53,7 +54,7 @@
 
         <div class="line-chart-container">
           <div id="line-chart-1">
-              <strong>By Circulation</strong>
+              <h3 class="chart-title">By Circulation</h3>
               <a class="reset" href="javascript:lineChart1.filterAll();lineChart1Range.filterAll();dc.redrawAll();" style="display: none;">reset</a>
 
               <div class="clearfix"></div>
