First attempt at changeable data source

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   <div class="container">
 
     <h2 class="header">Magazine Circulation</h2>
+    <label for="title-select">Select a Title</label>
+    <select name="title-select" id="title-select">
+      <option value="saev" selected>Saturday Evening Post</option>
+      <option value="neyo">New Yorker</option>
+    </select>
 
     <div class="chart-group-1">
       <h3 id="magazine-title-1"></h3>
