Fix some data inconsistencies, add some new data sets

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <select name="title-select" id="title-select">
       <option value="saev" selected>Saturday Evening Post</option>
       <option value="neyo">New Yorker</option>
+      <option value="vafa">Vanity Fair</option>
+      <option value="blma">Black Mask</option>
+      <option value="coll">Collier's</option>
+      <option value="amma">American Magazine</option>
     </select>
 
     <div class="chart-group-1">
