Add Street and Smith

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <option value="blma">Black Mask</option>
       <option value="coll">Collier's</option>
       <option value="amma">American Magazine</option>
+      <option value="stsm">Street & Smith Combination</option>
     </select>
 
     <div class="chart-group-1">
