Feature/enhanced tooltip (#29)
* Stateful tooltip rendering

* Create conditional logic for tooltip - got majority of data in tooltip

* Cleanup

--- a/index.html
+++ b/index.html
@@ -17,16 +17,40 @@
   <div class="container">
 
     <h2 class="header">Magazine Circulation</h2>
-    <label for="title-select">Select a Title</label>
-    <select name="title-select" id="title-select">
-      <option value="saev" selected>Saturday Evening Post</option>
-      <option value="neyo">New Yorker</option>
-      <option value="vafa">Vanity Fair</option>
-      <option value="blma">Black Mask</option>
-      <option value="coll">Collier's</option>
-      <option value="amma">American Magazine</option>
-      <option value="stsm">Street & Smith Combination</option>
-    </select>
+    <div class="select-field">
+      <label for="title-select">Select a Title</label>
+      <select name="title-select" id="title-select">
+        <option value="saev" selected>Saturday Evening Post</option>
+        <option value="neyo">New Yorker</option>
+        <option value="vafa">Vanity Fair</option>
+        <option value="blma">Black Mask</option>
+        <option value="coll">Collier's</option>
+        <option value="amma">American Magazine</option>
+        <option value="stsm">Street & Smith Combination</option>
+      </select>
+    </div>
+    <div class="switch-field">
+      <input
+        type="radio"
+        id="renderOption1"
+        name="chart-group-1"
+        value="rawData"
+        onChange="changeRenderOption(event)"
+        checked />
+      <label for="renderOption1">Raw Data</label>
+
+      <input type="radio" id="renderOption2"
+       name="chart-group-1" value="percentOfPopulation"
+       onChange="changeRenderOption(event)"
+       />
+      <label for="renderOption2">% of Population</label>
+
+      <button id="clearIssueFilterButton"
+        value="Clear Issue"
+        onClick="javascript:lineChart1.unClick()"
+       >Clear Issue </button>
+      <!-- <label for="clearIssueFilterButton" id="clearIssueLabel">Clear Issue</label> -->
+    </div>
 
     <div class="chart-group-1">
       <h3 id="magazine-title-1"></h3>
@@ -39,32 +63,9 @@
               <div class="clearfix"></div>
           </div>
           <div id="line-chart-1-range"></div>
+          <p class="caption">Click and drag on the lower chart to select a time range.</p>
         </div>
         <div id="us1-chart">
-          <form>
-            <div class="switch-field">
-              <input
-                type="radio"
-                id="renderOption1"
-                name="chart-group-1"
-                value="rawData"
-                onChange="javascript:us1ChartRenderOption=event.target.value;us1Chart.customUpdate();dc.redrawAll();"
-                checked />
-              <label for="renderOption1">Raw Data</label>
-
-              <input type="radio" id="renderOption2"
-               name="chart-group-1" value="percentOfPopulation"
-               onChange="javascript:us1ChartRenderOption=event.target.value;us1Chart.customUpdate();dc.redrawAll();"
-               />
-              <label for="renderOption2">% of Population</label>
-
-              <button id="clearIssueFilterButton"
-                value="Clear Issue"
-                onClick="javascript:lineChart1.unClick()"
-               >Clear Issue </button>
-              <!-- <label for="clearIssueFilterButton" id="clearIssueLabel">Clear Issue</label> -->
-            </div>
-          </form>
             <h3 class="chart-title">Circulation By State (color: total sold)</h3>
             <a class="reset" href="javascript:us1Chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
             <div class="clearfix"></div>
