Remove click logic from choropleth

--- a/index.html
+++ b/index.html
@@ -66,10 +66,8 @@
           <p class="caption">Click and drag on the lower chart to select a time range.</p>
         </div>
         <div id="us1-chart">
-            <h3 class="chart-title">Circulation By State (color: total sold)</h3>
-            <a class="reset" href="javascript:us1Chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+            <h3 class="chart-title">Circulation By State</h3>
             <div class="clearfix"></div>
-            <p class="reset" style="display: none;">Current filter: <span class="filter"></span></p>
         </div>
       </div>
     </div>
