First pass at Tooltip improvement, add new data set and cleaner functions

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <option value="coll">Collier's</option>
         <option value="amma">American Magazine</option>
         <option value="stsm">Street & Smith Combination</option>
+        <option value="adve">Adventure</option>
       </select>
     </div>
     <div class="switch-field">
