First pass at using awesomplete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="assets/css/dc.css">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/awesomplete.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
@@ -18,8 +19,9 @@
 
     <h2 class="header">Magazine Circulation</h2>
     <div class="select-field">
-      <label for="title-select">Select a Title</label>
-      <select name="title-select" id="title-select">
+      <label for="title-select">Search Titles:</label>
+      <input name="title-select" id="title-select">
+      <!-- <select name="title-select" id="title-select">
         <option value="saev" selected>Saturday Evening Post</option>
         <option value="neyo">New Yorker</option>
         <option value="vafa">Vanity Fair</option>
@@ -28,7 +30,7 @@
         <option value="amma">American Magazine</option>
         <option value="stsm">Street & Smith Combination</option>
         <option value="adve">Adventure</option>
-      </select>
+      </select> -->
     </div>
     <div class="switch-field">
       <input
@@ -80,6 +82,7 @@
   <script type="text/javascript" src="assets/js/dc.min.js"></script>
   <script src="assets/js/dateformat.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
+  <script src="assets/js/awesomplete.min.js"></script>
   <script src="assets/js/index.js"></script>
 </body>
 </html>
