Major redesign of data rendering

--- a/index.html
+++ b/index.html
@@ -22,6 +22,30 @@
     </div>
 
     <div class="charts">
+      <div class="line-chart-container">
+        <div id="line-chart">
+            <div class='chart-header'>
+              <h3 class="title">Circulation Data</h3>
+              <div class="switch-field">
+                <button id="clearIssueFilterButton"
+                  class="switch-button"
+                  value="Clear Issue"
+                  onClick="javascript:lineChart.unClick()"
+                 >Clear Issue </button>
+                 <button
+                  class="reset switch-button"
+                  onClick="javascript:lineChart.filterAll();rangeChart.filterAll();dc.redrawAll();"
+                  style="display: none;">
+                    Reset Chart
+                </button>
+                <!-- <label for="clearIssueFilterButton" id="clearIssueLabel">Clear Issue</label> -->
+              </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div id="range-chart"></div>
+        <p class="caption">Click and drag on the lower chart to select a time range.</p>
+      </div>
       <div class='choropleth-container'>
           <div class="chart-header">
             <h3 class="title">Circulation By State</h3>
@@ -41,10 +65,10 @@
                />
               <label for="renderOption2">% of Population</label>
 
-              <button id="clearIssueFilterButton"
+              <!-- <button id="clearIssueFilterButton"
                 value="Clear Issue"
                 onClick="javascript:lineChart.unClick()"
-               >Clear Issue </button>
+               >Clear Issue </button> -->
               <!-- <label for="clearIssueFilterButton" id="clearIssueLabel">Clear Issue</label> -->
             </div>
           </div>
@@ -53,18 +77,24 @@
             </div>
             <div class="clearfix"></div>
             <div class="render-data">
-              <div class="tooltip-data">
-                <h4 class="key">Date</h4>
-                <p id="issue-date"> - </p>
+              <div class="tooltip-data flex sb">
+                <div class="half-em-margin">
+                  <h4 class="key">Date</h4>
+                  <p id="issue-date"> - </p>
+                </div>
+                <div class="half-em-margin">
+                  <h4 class="key">State</h4>
+                  <p id="selected-state">-</p>
+                </div>
               </div>
               <div class="tooltip-data flex sb">
                 <div class="half-em-margin">
-                  <h4 class="key">State</h4>
-                  <p>-</p>
-                </div>
-                <div class="half-em-margin">
                   <h4 class="key">Total Circulation</h4>
                   <p id="total-circulation">-</p>
+                </div>
+                <div class="half-em-margin">
+                  <h4 class="key">Price</h4>
+                  <p id="issue-price">-</p>
                 </div>
               </div>
               <div class="tooltip-data flex sb">
@@ -72,48 +102,33 @@
                   <h4 class="key">Editor</h4>
                   <p id="issue-editor">-</p>
                 </div>
-                <div class="half-em-margin">
-                  <h4 class="key">Price</h4>
-                  <p id="issue-price">-</p>
-                </div>
               </div>
               <div class="tooltip-data">
                 <h4 class="key">Publishing Company</h4>
                 <p id="issue-publisher">-</p>
               </div>
-                <div class="tooltip-data flex sb">
-                  <div class="half-em-margin">
-                    <h4 class="key">Mail Subscriptions</h4>
-                    <p> - </p>
-                   </div>
-                  <div class="half-em-margin">
-                    <h4 class="key">Single Copy Sales</h4>
-                    <p> - </p>
-                   </div>
+              <div class="tooltip-data flex sb">
+                <div class="half-em-margin">
+                  <h4 class="key">Mail Subscriptions</h4>
+                  <p id="mail-subscriptions"> - </p>
+                 </div>
+                <div class="half-em-margin">
+                  <h4 class="key">Single Copy Sales</h4>
+                  <p id="single-copy-sales"> - </p>
+                 </div>
+              </div>
+              <div class="tooltip-data flex sb">
+                <div class="half-em-margin">
+                  <h4 class="key">% of State Population</h4>
+                  <p id="state-pop"> -</p>
                 </div>
-                <div class="tooltip-data flex sb">
-                  <div class="half-em-margin">
-                    <h4 class="key">% of State Population</h4>
-                    <p> -</p>
-                  </div>
-                  <div class="half-em-margin">
-                    <h4 class="key">% of Total Circulation</h4>
-                    <p>-</p>
-                  </div>
+                <div class="half-em-margin">
+                  <h4 class="key">% of Total Circulation</h4>
+                  <p id="percent-of-total">-</p>
                 </div>
+              </div>
             </div>
           </div>
-      </div>
-      <div class="line-chart-container">
-        <div id="line-chart">
-            <div class='chart-header'>
-              <h3 class="title">Circulation Data</h3>
-            </div>
-            <a class="reset" href="javascript:lineChart.filterAll();rangeChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
-            <div class="clearfix"></div>
-        </div>
-        <div id="range-chart"></div>
-        <p class="caption">Click and drag on the lower chart to select a time range.</p>
       </div>
     </div>
 
