First pass at special notes

--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
               </div>
             </div>
           </div>
+          <div class="special-note">
+            <h4 class="key">Special Note:</h4>
+            <figcaption id="special-note">
+            </figcaption>
+          </div>
       </div>
     </div>
 
@@ -140,6 +145,6 @@
   <script src="assets/js/dateformat.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
   <script src="assets/js/awesomplete.min.js"></script>
-  <script src="assets/js/index.js"></script>
+  <script type="module" src="assets/js/index.js"></script>
 </body>
 </html>
