Feature/special notes (#48)
* Modularize code

* Clean up legend interaction with notes

--- a/index.html
+++ b/index.html
@@ -27,21 +27,14 @@
             <div class='chart-header'>
               <h3 class="title">Circulation Data</h3>
               <div class="switch-field">
-                <button id="clearIssueFilterButton"
-                  class="switch-button"
-                  value="Clear Issue"
-                  onClick="javascript:lineChart.unClick()"
-                 >Clear Issue </button>
-                 <button
-                  class="reset switch-button"
-                  onClick="javascript:lineChart.filterAll();rangeChart.filterAll();dc.redrawAll();"
-                  style="display: none;">
+                <button id="clearIssueFilterButton" class="switch-button">
+                 Clear Issue
+                </button>
+                <button id="reset-button" class="reset switch-button" style="display:none;">
                     Reset Chart
                 </button>
-                <!-- <label for="clearIssueFilterButton" id="clearIssueLabel">Clear Issue</label> -->
               </div>
             </div>
-            <div class="clearfix"></div>
         </div>
         <div id="range-chart"></div>
         <p class="caption">Click and drag on the lower chart to select a time range.</p>
@@ -55,21 +48,13 @@
                 id="renderOption1"
                 name="chart-group"
                 value="rawData"
-                onChange="changeRenderOption(event)"
                 checked />
               <label for="renderOption1">Raw Data</label>
 
               <input type="radio" id="renderOption2"
                name="chart-group" value="percentOfPopulation"
-               onChange="changeRenderOption(event)"
                />
               <label for="renderOption2">% of Population</label>
-
-              <!-- <button id="clearIssueFilterButton"
-                value="Clear Issue"
-                onClick="javascript:lineChart.unClick()"
-               >Clear Issue </button> -->
-              <!-- <label for="clearIssueFilterButton" id="clearIssueLabel">Clear Issue</label> -->
             </div>
           </div>
           <div class="choropleth-data">
@@ -129,6 +114,11 @@
               </div>
             </div>
           </div>
+          <div class="special-note">
+            <h4 class="key">Special Note:</h4>
+            <figcaption id="special-note">
+            </figcaption>
+          </div>
       </div>
     </div>
 
@@ -140,6 +130,6 @@
   <script src="assets/js/dateformat.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
   <script src="assets/js/awesomplete.min.js"></script>
-  <script src="assets/js/index.js"></script>
+  <script type="module" src="assets/js/index.js"></script>
 </body>
 </html>
